--- a/index.html
+++ b/index.html
@@ -3,12 +3,67 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
+  <title>Báo Giá Quảng Cáo Bảng Hiệu Chuyên Nghiệp</title>
   <link href='/style.css' rel='stylesheet'>
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
+  <header>
+    <h1>Dịch Vụ Quảng Cáo Bảng Hiệu Chuyên Nghiệp</h1>
+    <p>Giải pháp toàn diện cho mọi nhu cầu quảng cáo của bạn</p>
+  </header>
+
+  <section id="services">
+    <h2>Dịch Vụ Của Chúng Tôi</h2>
+    <div class="service-item">
+      <h3>Thiết Kế Bảng Hiệu</h3>
+      <p>Thiết kế sáng tạo và chuyên nghiệp, đảm bảo thu hút sự chú ý.</p>
+    </div>
+    <div class="service-item">
+      <h3>Thi Công Lắp Đặt</h3>
+      <p>Lắp đặt nhanh chóng, an toàn và đúng kỹ thuật.</p>
+    </div>
+    <div class="service-item">
+      <h3>Bảo Trì Sửa Chữa</h3>
+      <p>Dịch vụ bảo trì, sửa chữa định kỳ, giúp bảng hiệu luôn mới đẹp.</p>
+    </div>
+  </section>
+
+  <section id="quote">
+    <h2>Yêu Cầu Báo Giá</h2>
+    <form id="quote-form">
+      <div class="form-group">
+        <label for="name">Họ và Tên:</label>
+        <input type="text" id="name" name="name" required>
+      </div>
+      <div class="form-group">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+      </div>
+      <div class="form-group">
+        <label for="phone">Điện Thoại:</label>
+        <input type="tel" id="phone" name="phone">
+      </div>
+      <div class="form-group">
+        <label for="service">Dịch Vụ Quan Tâm:</label>
+        <select id="service" name="service">
+          <option value="design">Thiết Kế Bảng Hiệu</option>
+          <option value="installation">Thi Công Lắp Đặt</option>
+          <option value="maintenance">Bảo Trì Sửa Chữa</option>
+          <option value="other">Khác</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="details">Chi Tiết Yêu Cầu:</label>
+        <textarea id="details" name="details" rows="4" required></textarea>
+      </div>
+      <button type="submit">Gửi Yêu Cầu</button>
+    </form>
+  </section>
+
+  <footer>
+    <p>&copy; 2023 Dịch Vụ Quảng Cáo Bảng Hiệu. All rights reserved.</p>
+  </footer>
+
   <script defer type="text/javascript" src="/main.js"></script>
 </body>
 </html>
