--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Báo Giá Quảng Cáo Bảng Hiệu Chuyên Nghiệp</title>
-  <link href='/style.css' rel='stylesheet'>
+  <link href='style.css' rel='stylesheet'>
 </head>
 <body>
   <header>
@@ -64,6 +64,6 @@
     <p>&copy; 2023 Dịch Vụ Quảng Cáo Bảng Hiệu. All rights reserved.</p>
   </footer>
 
-  <script defer type="text/javascript" src="/main.js"></script>
+  <script defer type="text/javascript" src="main.js"></script>
 </body>
 </html>
