--- a/index.html
+++ b/index.html
@@ -9,29 +9,46 @@
 <body>
   <header>
     <h1>Công Cụ Tính Toán Giá Thành Sản Phẩm</h1>
-    <p>Nhập thông tin để tính toán giá thành sản phẩm của bạn</p>
+    <p>Công cụ tính toán và lưu trữ giá thành sản phẩm</p>
   </header>
 
-  <section id="calculator">
-    <h2>Tính Toán Giá Thành</h2>
-    <div class="form-group">
-      <label for="material-cost">Chi Phí Nguyên Liệu:</label>
-      <input type="number" id="material-cost" value="0" min="0">
+  <div class="container">
+    <div class="dashboard">
+      <h2>Dashboard</h2>
+      <ul>
+        <li class="tab-link active" data-tab="calculator">Tính Giá</li>
+        <li class="tab-link" data-tab="storage">Kho Lưu Giá</li>
+      </ul>
     </div>
-    <div class="form-group">
-      <label for="labor-cost">Chi Phí Nhân Công:</label>
-      <input type="number" id="labor-cost" value="0" min="0">
+
+    <div class="content">
+      <section id="calculator" class="tab-content active">
+        <h2>Tính Toán Giá Thành</h2>
+        <div class="form-group">
+          <label for="material-cost">Chi Phí Nguyên Liệu:</label>
+          <input type="number" id="material-cost" value="0" min="0">
+        </div>
+        <div class="form-group">
+          <label for="labor-cost">Chi Phí Nhân Công:</label>
+          <input type="number" id="labor-cost" value="0" min="0">
+        </div>
+        <div class="form-group">
+          <label for="overhead-cost">Chi Phí Khác (Chi Phí Chung):</label>
+          <input type="number" id="overhead-cost" value="0" min="0">
+        </div>
+        <div id="result">
+          <h3>Giá Thành Dự Kiến:</h3>
+          <p id="total-cost">0</p>
+        </div>
+      </section>
+
+      <section id="storage" class="tab-content">
+        <h2>Kho Lưu Giá</h2>
+        <p>Nội dung cho Kho Lưu Giá sẽ ở đây.</p>
+        <!-- Future feature: table or list to display saved prices -->
+      </section>
     </div>
-    <div class="form-group">
-      <label for="overhead-cost">Chi Phí Khác (Chi Phí Chung):</label>
-      <input type="number" id="overhead-cost" value="0" min="0">
-    </div>
-    <button id="calculate-btn">Tính Toán</button>
-    <div id="result">
-      <h3>Giá Thành Dự Kiến:</h3>
-      <p id="total-cost">0</p>
-    </div>
-  </section>
+  </div>
 
   <footer>
     <p>&copy; 2023 Công Cụ Tính Toán Giá Thành. All rights reserved.</p>
