--- a/index.html
+++ b/index.html
@@ -1,59 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Công Cụ Tính Toán Giá Thành Sản Phẩm</title>
-  <link href='style.css' rel='stylesheet'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Firebase Studio Dashboard</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Công Cụ Tính Toán Giá Thành Sản Phẩm</h1>
-    <p>Công cụ tính toán và lưu trữ giá thành sản phẩm</p>
-  </header>
-
-  <div class="container">
-    <div class="dashboard">
-      <h2>Dashboard</h2>
-      <ul>
-        <li class="tab-link active" data-tab="calculator">Tính Giá</li>
-        <li class="tab-link" data-tab="storage">Kho Lưu Giá</li>
-      </ul>
+    <header>
+        <h1>Firebase Studio Dashboard</h1>
+        <p>Manage your Firebase projects with ease</p>
+    </header>
+    <div class="container">
+        <aside class="dashboard">
+            <h2>Menu</h2>
+            <ul>
+                <li class="active" data-tab="calculator">Storage Calculator</li>
+                <li data-tab="storage">Storage Management</li>
+                </ul>
+        </aside>
+        <main class="content">
+            <section id="calculator" class="tab-content active">
+                <h2>Storage Cost Calculator</h2>
+                <div class="form-group">
+                    <label for="storageAmount">Enter Storage Amount (GB):</label>
+                    <input type="number" id="storageAmount" placeholder="e.g., 100">
+                </div>
+                <div id="result">
+                    <h3>Estimated Monthly Cost:</h3>
+                    <p id="costDisplay">$0.00</p>
+                </div>
+            </section>
+            <section id="storage" class="tab-content">
+                <h2>Storage Management</h2>
+                <p>Coming Soon...</p>
+            </section>
+        </main>
     </div>
-
-    <div class="content">
-      <section id="calculator" class="tab-content active">
-        <h2>Tính Toán Giá Thành</h2>
-        <div class="form-group">
-          <label for="material-cost">Chi Phí Nguyên Liệu:</label>
-          <input type="number" id="material-cost" value="0" min="0">
-        </div>
-        <div class="form-group">
-          <label for="labor-cost">Chi Phí Nhân Công:</label>
-          <input type="number" id="labor-cost" value="0" min="0">
-        </div>
-        <div class="form-group">
-          <label for="overhead-cost">Chi Phí Khác (Chi Phí Chung):</label>
-          <input type="number" id="overhead-cost" value="0" min="0">
-        </div>
-        <div id="result">
-          <h3>Giá Thành Dự Kiến:</h3>
-          <p id="total-cost">0</p>
-        </div>
-      </section>
-
-      <section id="storage" class="tab-content">
-        <h2>Kho Lưu Giá</h2>
-        <p>Nội dung cho Kho Lưu Giá sẽ ở đây.</p>
-        <!-- Future feature: table or list to display saved prices -->
-      </section>
-    </div>
-  </div>
-
-  <footer>
-    <p>&copy; 2023 Công Cụ Tính Toán Giá Thành. All rights reserved.</p>
-  </footer>
-
-  <script defer type="text/javascript" src="main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
